--- a/software-development-company.html
+++ b/software-development-company.html
@@ -295,31 +295,21 @@
         </div>
 
         <!-- home banner start-->
-        <div class="breadcrumbarea sp_bottom_100"
-            style="background: url(assets/img/about/contact-scaled.webp); background-repeat: no-repeat !important; background-size: cover !important;"
-            data-scroll="1" id="home">
+        <div class="breadcrumbarea sp_bottom_100" data-scroll="1" id="home">
             <!-- <div class="breadcrumbarea__overlay"></div> -->
             <div class="container">
                 <div class="row">
                     <div class="col-xl-6" data-aos="zoom-in" data-aos-duration="1200" data-aos-delay="200">
                         <div class="breadcrumbarea__content__wraper">
                             <div class="breadcrumbarea__title">
-                                <h2 class="heading">Contact Us</h2>
+                                <h2 class="heading">Expert Solutions in Web Design, Software Development, Mobile Apps,
+                                    and SEO</h2>
                             </div>
                             <div class="breadcrumbarea__inner">
-                                <p>Digital Minds On is best platform for app and web development. We not only develop
-                                    them but
-                                    also provide SEO services so you can attract larger number of audience. With Digital
-                                    Minds
-                                    On, you can improve the visibility and enhance the importance of your business.
-                                    Contact
-                                    Digital Minds On to take the business next level. We are just one click away from
-                                    you, so
-                                    contact us and eliminate all the issues that you are facing. Once you partner with
-                                    us, you
-                                    will see an incredible amount of change. Digital Minds On is not only about
-                                    improving
-                                    visibility, it is also about being hassle free and stress free from promotion.</p>
+                                <p>As one of Pakistan’s leading web design and development companies, we specialize in
+                                    delivering innovative digital solutions tailored to your business needs. Our team is
+                                    committed to helping clients boost their online presence, expand market reach, and
+                                    achieve their goals efficiently on time and within budget.</p>
                                 <section class="features-section">
                                     <h3 style="text-align: center; width: 100%;">Why Choose The Digital Minds On</h3>
                                     <div class="feature-box">
@@ -377,8 +367,8 @@
                                     </div>
                                     <div class="col-xl-12">
                                         <div class="contact__input">
-                                            <input class="contact__common__input" type="text" name="con_email"
-                                                id="con_email" placeholder="Email" required="">
+                                            <input class="contact__common__input" type="email" name="con_email"
+                                                id="con_email" placeholder="Email" required>
                                         </div>
                                     </div>
                                     <div class="col-xl-12">
@@ -1764,7 +1754,7 @@
                                     </div>
                                     <div class="col-xl-12">
                                         <div class="contact__input">
-                                            <input class="contact__common__input" type="text" name="con_email"
+                                            <input class="contact__common__input" type="email" name="con_email"
                                                 id="con_email" placeholder="Email" required>
                                         </div>
                                     </div>
@@ -1849,6 +1839,7 @@
     <script src="assets/js/swiper-bundle.min.js"></script>
     <script src="assets/js/Landing.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"></script>
+    
     <script>
         AOS.init();
     </script>
