--- a/software-development-company.html
+++ b/software-development-company.html
@@ -306,7 +306,8 @@
                                     and SEO</h2>
                             </div>
                             <div class="breadcrumbarea__inner">
-                                <p>As one of Pakistan’s leading web design and development companies, we specialize in
+                                <p class="text-theme">As one of Pakistan’s leading web design and development companies,
+                                    we specialize in
                                     delivering innovative digital solutions tailored to your business needs. Our team is
                                     committed to helping clients boost their online presence, expand market reach, and
                                     achieve their goals efficiently on time and within budget.</p>
@@ -427,9 +428,13 @@
 
                             <li class="icon-box-content">
                                 <div class="icon-design">
-                                    <i class="icofont-smile"></i>
+                                    <svg width="24" height="24" viewBox="0 0 24 24" fill="#ffcc00"
+                                        xmlns="http://www.w3.org/2000/svg">
+                                        <path d="M12 2C6.48 2 2 6.48 2 12s4.48...Z" />
+                                    </svg>
+
                                 </div>
-                                <p class="box-title"><span>happy client</span></p>
+                                <p class="box-title"><span>Happy Client</span></p>
                             </li>
                         </ul>
 
@@ -451,7 +456,7 @@
                 <div class="container">
 
                     <div class="row">
-
+                        <h3 style="text-align: center; margin-bottom: 20px;">We Offer at Digital Minds On</h3>
                         <div class="col-xl-4 col-lg-4 col-md-6 col-sm-6 col-12 aos-init aos-animate" data-aos="fade-up"
                             data-aos-duration="1500">
                             <div
@@ -463,7 +468,7 @@
                                     </div>
                                     <div class="service__content">
                                         <div class="service__heading">
-                                            <h5><a href="web-development-services">Web Development</a></h5>
+                                            <h5><a href="javascript:void(0)">Web Development</a></h5>
                                         </div>
                                         <div class="service__text">
                                             <p>Digital Minds On leads in web development, creating responsive, and
@@ -474,9 +479,8 @@
 
                                     </div>
                                     <div class="service__icon service__icon--2">
-                                        <a class="direction__btn" href="web-development-services"><svg width="34"
-                                                height="34" viewBox="0 0 34 34" fill="none"
-                                                xmlns="http://www.w3.org/2000/svg">
+                                        <a class="direction__btn" href="javascript:void(0)"><svg width="34" height="34"
+                                                viewBox="0 0 34 34" fill="none" xmlns="http://www.w3.org/2000/svg">
                                                 <path d="M14.4258 10.9897L23.0101 10.9897L23.0101 19.574"
                                                     stroke="#0A0624" stroke-width="1.5" stroke-miterlimit="10"
                                                     stroke-linecap="round" stroke-linejoin="round"></path>
@@ -501,7 +505,7 @@
                                     </div>
                                     <div class="service__content">
                                         <div class="service__heading">
-                                            <h5><a href="mobile-app-development-services">Mobile App Development</a>
+                                            <h5><a href="javascript:void(0)">Mobile App Development</a>
                                             </h5>
                                         </div>
                                         <div class="service__text">
@@ -514,9 +518,8 @@
 
                                     </div>
                                     <div class="service__icon service__icon--2">
-                                        <a class="direction__btn" href="mobile-app-development-services"><svg width="34"
-                                                height="34" viewBox="0 0 34 34" fill="none"
-                                                xmlns="http://www.w3.org/2000/svg">
+                                        <a class="direction__btn" href="javascript:void(0)"><svg width="34" height="34"
+                                                viewBox="0 0 34 34" fill="none" xmlns="http://www.w3.org/2000/svg">
                                                 <path d="M14.4258 10.9897L23.0101 10.9897L23.0101 19.574"
                                                     stroke="#0A0624" stroke-width="1.5" stroke-miterlimit="10"
                                                     stroke-linecap="round" stroke-linejoin="round"></path>
@@ -541,7 +544,7 @@
                                     </div>
                                     <div class="service__content">
                                         <div class="service__heading">
-                                            <h5><a href="software-development-services">Software Development</a></h5>
+                                            <h5><a href="javascript:void(0)">Software Development</a></h5>
                                         </div>
                                         <div class="service__text">
                                             <p>Digital Minds On specializes in software development, crafting innovative
@@ -551,9 +554,8 @@
 
                                     </div>
                                     <div class="service__icon service__icon--2">
-                                        <a class="direction__btn " href="software-development-services"><svg width="34"
-                                                height="34" viewBox="0 0 34 34" fill="none"
-                                                xmlns="http://www.w3.org/2000/svg">
+                                        <a class="direction__btn " href="javascript:void(0)"><svg width="34" height="34"
+                                                viewBox="0 0 34 34" fill="none" xmlns="http://www.w3.org/2000/svg">
                                                 <path d="M14.4258 10.9897L23.0101 10.9897L23.0101 19.574"
                                                     stroke="#0A0624" stroke-width="1.5" stroke-miterlimit="10"
                                                     stroke-linecap="round" stroke-linejoin="round"></path>
@@ -577,7 +579,7 @@
                                     </div>
                                     <div class="service__content">
                                         <div class="service__heading">
-                                            <h5><a href="game-development-services">Game Development</a></h5>
+                                            <h5><a href="javascript:void(0)">Game Development</a></h5>
                                         </div>
                                         <div class="service__text">
                                             <p>Digital Minds On excels in game development, creating immersive,
@@ -589,9 +591,8 @@
 
                                     </div>
                                     <div class="service__icon service__icon--2">
-                                        <a class="direction__btn" href="game-development-services"><svg width="34"
-                                                height="34" viewBox="0 0 34 34" fill="none"
-                                                xmlns="http://www.w3.org/2000/svg">
+                                        <a class="direction__btn" href="javascript:void(0)"><svg width="34" height="34"
+                                                viewBox="0 0 34 34" fill="none" xmlns="http://www.w3.org/2000/svg">
                                                 <path d="M14.4258 10.9897L23.0101 10.9897L23.0101 19.574"
                                                     stroke="#0A0624" stroke-width="1.5" stroke-miterlimit="10"
                                                     stroke-linecap="round" stroke-linejoin="round"></path>
@@ -616,7 +617,7 @@
                                     </div>
                                     <div class="service__content">
                                         <div class="service__heading">
-                                            <h5><a href="wordpress-development-services">WordPress Sevelopment</a></h5>
+                                            <h5><a href="javascript:void(0)">WordPress Sevelopment</a></h5>
                                         </div>
                                         <div class="service__text">
                                             <p>Digital Minds On specializes in WordPress development, offering custom
@@ -627,9 +628,8 @@
 
                                     </div>
                                     <div class="service__icon service__icon--2">
-                                        <a class="direction__btn" href="wordpress-development-services"><svg width="34"
-                                                height="34" viewBox="0 0 34 34" fill="none"
-                                                xmlns="http://www.w3.org/2000/svg">
+                                        <a class="direction__btn" href="javascript:void(0)"><svg width="34" height="34"
+                                                viewBox="0 0 34 34" fill="none" xmlns="http://www.w3.org/2000/svg">
                                                 <path d="M14.4258 10.9897L23.0101 10.9897L23.0101 19.574"
                                                     stroke="#0A0624" stroke-width="1.5" stroke-miterlimit="10"
                                                     stroke-linecap="round" stroke-linejoin="round"></path>
@@ -654,7 +654,7 @@
                                     </div>
                                     <div class="service__content">
                                         <div class="service__heading">
-                                            <h5><a href="network-services">Network Solutions</a></h5>
+                                            <h5><a href="javascript:void(0)">Network Solutions</a></h5>
                                         </div>
                                         <div class="service__text">
                                             <p>Digital Minds On provides comprehensive network solutions, expert
@@ -665,7 +665,7 @@
 
                                     </div>
                                     <div class="service__icon service__icon--2">
-                                        <a class="direction__btn" href="network-services"><svg width="34" height="34"
+                                        <a class="direction__btn" href="javascript:void(0)"><svg width="34" height="34"
                                                 viewBox="0 0 34 34" fill="none" xmlns="http://www.w3.org/2000/svg">
                                                 <path d="M14.4258 10.9897L23.0101 10.9897L23.0101 19.574"
                                                     stroke="#0A0624" stroke-width="1.5" stroke-miterlimit="10"
@@ -691,7 +691,7 @@
                                     </div>
                                     <div class="service__content">
                                         <div class="service__heading">
-                                            <h5><a href="ui-ux-design">UI/UX Design</a></h5>
+                                            <h5><a href="javascript:void(0)">UI/UX Design</a></h5>
                                         </div>
                                         <div class="service__text">
                                             <p>Digital Minds On offers expert UI/UX design services, creating intuitive,
@@ -701,7 +701,7 @@
 
                                     </div>
                                     <div class="service__icon service__icon--2">
-                                        <a class="direction__btn" href="ui-ux-design"><svg width="34" height="34"
+                                        <a class="direction__btn" href="javascript:void(0)"><svg width="34" height="34"
                                                 viewBox="0 0 34 34" fill="none" xmlns="http://www.w3.org/2000/svg">
                                                 <path d="M14.4258 10.9897L23.0101 10.9897L23.0101 19.574"
                                                     stroke="#0A0624" stroke-width="1.5" stroke-miterlimit="10"
@@ -726,7 +726,7 @@
                                     </div>
                                     <div class="service__content">
                                         <div class="service__heading">
-                                            <h5><a href="seo-services">Search Engine Optimization</a></h5>
+                                            <h5><a href="javascript:void(0)">Search Engine Optimization</a></h5>
                                         </div>
                                         <div class="service__text">
                                             <p>Digital Minds On provides expert SEO services, optimizing websites to
@@ -737,7 +737,7 @@
 
                                     </div>
                                     <div class="service__icon service__icon--2">
-                                        <a class="direction__btn" href="seo-services"><svg width="34" height="34"
+                                        <a class="direction__btn" href="javascript:void(0)"><svg width="34" height="34"
                                                 viewBox="0 0 34 34" fill="none" xmlns="http://www.w3.org/2000/svg">
                                                 <path d="M14.4258 10.9897L23.0101 10.9897L23.0101 19.574"
                                                     stroke="#0A0624" stroke-width="1.5" stroke-miterlimit="10"
@@ -762,7 +762,7 @@
                                     </div>
                                     <div class="service__content">
                                         <div class="service__heading">
-                                            <h5><a href="content-creater">Content creator</a></h5>
+                                            <h5><a href="javascript:void(0)">Content creator</a></h5>
                                         </div>
                                         <div class="service__text">
                                             <p>Digital Minds On empowers brands with professional content creation,
@@ -772,7 +772,7 @@
 
                                     </div>
                                     <div class="service__icon service__icon--2">
-                                        <a class="direction__btn" href="content-creater"><svg width="34" height="34"
+                                        <a class="direction__btn" href="javascript:void(0)"><svg width="34" height="34"
                                                 viewBox="0 0 34 34" fill="none" xmlns="http://www.w3.org/2000/svg">
                                                 <path d="M14.4258 10.9897L23.0101 10.9897L23.0101 19.574"
                                                     stroke="#0A0624" stroke-width="1.5" stroke-miterlimit="10"
@@ -1711,7 +1711,12 @@
                     <div class="col-xl-6" data-aos="zoom-in" data-aos-duration="500">
                         <div class="parent-contact">
                             <div class="contact-us-img">
-                                <img src="assets/img/landingImg/Group-1162-768x628-1.webp" alt="Contact Us Image">
+                                <p class="text-theme">As one of Pakistan’s leading web design and development companies,
+                                    we specialize in
+                                    delivering innovative digital solutions tailored to your business needs. Our team is
+                                    committed to helping clients boost their online presence, expand market reach, and
+                                    achieve their goals efficiently on time and within budget.</p>
+                                <!-- <img src="assets/img/landingImg/Group-1162-768x628-1.webp" alt="Contact Us Image"> -->
                             </div>
                             <div class="footer__icon">
                                 <ul>
@@ -1839,7 +1844,7 @@
     <script src="assets/js/swiper-bundle.min.js"></script>
     <script src="assets/js/Landing.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"></script>
-    
+
     <script>
         AOS.init();
     </script>
