--- a/software-development-company.html
+++ b/software-development-company.html
@@ -1716,7 +1716,7 @@
                                     delivering innovative digital solutions tailored to your business needs. Our team is
                                     committed to helping clients boost their online presence, expand market reach, and
                                     achieve their goals efficiently on time and within budget.</p>
-                                <!-- <img src="assets/img/landingImg/Group-1162-768x628-1.webp" alt="Contact Us Image"> -->
+                                <img src="assets/img/landingImg/contact-email.webp" alt="Contact Us Image">
                             </div>
                             <div class="footer__icon">
                                 <ul>
