--- a/software-development-company.html
+++ b/software-development-company.html
@@ -357,7 +357,7 @@
                         </div>
                     </div>
                     <div class="col-xl-6" data-aos="zoom-in" data-aos-duration="1200" data-aos-delay="400">
-                        <div class="contact__input__wrapper contact__grident__bg">
+                        <div class="contact__input__wrapper contact_bg">
                             <form id="contact-form" method="POST" class="contact-form" action="landing-email.php">
                                 <div class="row">
                                     <div class="col-xl-12">
@@ -385,7 +385,7 @@
                                     </div>
                                     <!-- CAPTCHA Math Question -->
                                     <div class="col-xl-12">
-                                        <p>Solve: <span id="captchaQuestion"></span></p>
+                                        <p style="color: #fff;">Solve: <span id="captchaQuestion"></span></p>
                                         <input type="number" id="captcha" name="captcha" class="contact__common__input"
                                             placeholder="Your Answer" required>
                                     </div>
@@ -1748,7 +1748,7 @@
 
                     <!-- Right Side - Contact Form -->
                     <div class="col-xl-6" data-aos="zoom-in" data-aos-duration="600">
-                        <div class="contact__input__wrapper contact__grident__bg">
+                        <div class="contact__input__wrapper contact_bg">
                             <form id="contact-form" method="POST" class="contact-form" action="landing-email.php">
                                 <div class="row">
                                     <div class="col-xl-12">
@@ -1776,7 +1776,7 @@
                                     </div>
                                     <!-- CAPTCHA Math Question -->
                                     <div class="col-xl-12">
-                                        <p>Solve: 7 + 4 = ? <span id="captchaQuestion"></span></p>
+                                        <p style="color: #fff;">Solve: 7 + 4 = ? <span id="captchaQuestion"></span></p>
                                         <input type="number" id="captcha" name="captcha" class="contact__common__input"
                                             placeholder="Your Answer" required>
                                     </div>
