--- a/software-development-company.html
+++ b/software-development-company.html
@@ -312,7 +312,7 @@
                                     committed to helping clients boost their online presence, expand market reach, and
                                     achieve their goals efficiently on time and within budget.</p>
                                 <section class="features-section">
-                                    <h3 style="text-align: center; width: 100%;">Why Choose The Digital Minds On</h3>
+                                    <h3 style="width: 100%;">Why Choose The Digital Minds On</h3>
                                     <div class="feature-box">
                                         <i class="icofont-money feature-icon"></i>
                                         <div class="feature-text">Cost Efficient</div>
@@ -426,7 +426,7 @@
                                 <p class="box-title"><span>99% Success Rate</span></p>
                             </li>
 
-                            <li class="icon-box-content">
+                            <!-- <li class="icon-box-content">
                                 <div class="icon-design">
                                     <svg width="24" height="24" viewBox="0 0 24 24" fill="#ffcc00"
                                         xmlns="http://www.w3.org/2000/svg">
@@ -434,7 +434,13 @@
                                     </svg>
 
                                 </div>
-                                <p class="box-title"><span>Happy Client</span></p>
+                                <p class="box-title"><span>20+ Projects Delivery</span></p>
+                            </li> -->
+                            <li class="icon-box-content">
+                                <div class="icon-design">
+                                    <i class="icofont-delivery-time"></i>
+                                </div>
+                                <p class="box-title"><span>20+ Projects Delivery</span></p>
                             </li>
                         </ul>
 
