--- a/software-development-company.html
+++ b/software-development-company.html
@@ -438,7 +438,7 @@
                             </li> -->
                             <li class="icon-box-content">
                                 <div class="icon-design">
-                                    <i class="icofont-delivery-time"></i>
+                                    <i class="icofont-briefcase"></i>
                                 </div>
                                 <p class="box-title"><span>20+ Projects Delivery</span></p>
                             </li>
