--- a/software-development-company.html
+++ b/software-development-company.html
@@ -375,7 +375,7 @@
                                     <div class="col-xl-12">
                                         <div class="contact__input">
                                             <input class="contact__common__input" type="text" name="phone"
-                                                placeholder="Phone" required>
+                                                placeholder="+1 (555) 123-4567" required>
                                         </div>
                                     </div>
                                     <div class="col-xl-12">
@@ -1772,7 +1772,7 @@
                                     <div class="col-xl-12">
                                         <div class="contact__input">
                                             <input class="contact__common__input" type="text" name="phone"
-                                                placeholder="Phone" required>
+                                                placeholder="+1 (555) 123-4567" required>
                                         </div>
                                     </div>
                                     <div class="col-xl-12">
