--- a/software-development-company.html
+++ b/software-development-company.html
@@ -623,7 +623,7 @@
                                     </div>
                                     <div class="service__content">
                                         <div class="service__heading">
-                                            <h5><a href="javascript:void(0)">WordPress Sevelopment</a></h5>
+                                            <h5><a href="javascript:void(0)">WordPress Development</a></h5>
                                         </div>
                                         <div class="service__text">
                                             <p>Digital Minds On specializes in WordPress development, offering custom
