--- a/software-development-company.html
+++ b/software-development-company.html
@@ -1850,10 +1850,6 @@
     <script src="assets/js/swiper-bundle.min.js"></script>
     <script src="assets/js/Landing.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"></script>
-
-    <script>
-        AOS.init();
-    </script>
     <script>
         AOS.init({
             duration: 1000, // Smooth animation duration
@@ -1890,6 +1886,28 @@
             document.getElementById("light--to-dark-button")?.classList.remove("dark--mode");
         }
     </script>
+    <script type="text/javascript">
+        _linkedin_partner_id = "8416105";
+        window._linkedin_data_partner_ids = window._linkedin_data_partner_ids || [];
+        window._linkedin_data_partner_ids.push(_linkedin_partner_id);
+    </script>
+    <script type="text/javascript">
+        (function (l) {
+            if (!l) {
+                window.lintrk = function (a, b) { window.lintrk.q.push([a, b]) };
+                window.lintrk.q = []
+            }
+            var s = document.getElementsByTagName("script")[0];
+            var b = document.createElement("script");
+            b.type = "text/javascript"; b.async = true;
+            b.src = "https://snap.licdn.com/li.lms-analytics/insight.min.js";
+            s.parentNode.insertBefore(b, s);
+        })(window.lintrk);
+    </script>
+    <noscript>
+        <img height="1" width="1" style="display:none;" alt=""
+            src="https://px.ads.linkedin.com/collect/?pid=8416105&fmt=gif"   />
+    </noscript>
 </body>
 
 </html>
