--- a/software-development-company.html
+++ b/software-development-company.html
@@ -195,7 +195,7 @@
                                     <a href="/" data-scroll-nav="1">
                                         <img src="assets/img/logo/full-logo.svg" alt="Digitalminds-logo"
                                             class="dark-mode">
-                                        <img src="assets/img/logo/header/logo-local-host new.svg"
+                                        <img src="assets/img/logo/header/logo-local-host-new.svg"
                                             alt="Digitalminds-logo" class="light-mode">
                                     </a>
                                 </div>
