--- a/team.html
+++ b/team.html
@@ -151,7 +151,7 @@
                                     <a href="/">
                                         <img src="assets/img/logo/full-logo.svg" alt="Digitalminds-logo"
                                             class="dark-mode">
-                                        <img src="assets/img/logo/header/logo-local-host new.svg"
+                                        <img src="assets/img/logo/header/logo-local-host-new.svg"
                                             alt="Digitalminds-logo" class="light-mode">
                                     </a>
                                 </div>
