--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
                     <div class="mobile__log">
                         <a class="offcanvas__logo_link" href="/">
                             <img src="assets/img/logo/full-logo.svg" alt="Digitalminds-logo" class="dark-mode">
-                            <img src="assets/img/logo/header/logo-local-host new.svg" alt="Digitalminds-logo"
+                            <img src="assets/img/logo/header/logo-local-host-new.svg" alt="Digitalminds-logo"
                                 class="light-mode">
                         </a>
                     </div>
@@ -291,7 +291,7 @@
                 <div class="offcanvas__logo">
                     <a class="offcanvas__logo_link" href="/">
                         <img src="assets/img/logo/full-logo.svg" alt="Digitalminds-logo" class="dark-mode">
-                        <img src="assets/img/logo/header/logo-local-host new.svg" alt="Digitalminds-logo"
+                        <img src="assets/img/logo/header/logo-local-host-new.svg" alt="Digitalminds-logo"
                             class="light-mode">
                     </a>
                     <button class="offcanvas__close--btn" data-offcanvas>Close</button>
